WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125798
DatabaseProcess: Fix a few bugs with opening an IDB connection
https://bugs.webkit.org/show_bug.cgi?id=125798
Summary
DatabaseProcess: Fix a few bugs with opening an IDB connection
Brady Eidson
Reported
2013-12-16 12:13:25 PST
DatabaseProcess: Fix a few bugs with opening an IDB connection There's been a long-time bug in IDB code in WebCore that prevents pending calls from being made. Also, the DatabaseProcess needs to return a database ID in the metadata.
Attachments
Patch v1
(3.63 KB, patch)
2013-12-16 12:20 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2013-12-16 12:20:49 PST
Created
attachment 219341
[details]
Patch v1
WebKit Commit Bot
Comment 2
2013-12-16 13:23:46 PST
Comment on
attachment 219341
[details]
Patch v1 Clearing flags on attachment: 219341 Committed
r160659
: <
http://trac.webkit.org/changeset/160659
>
WebKit Commit Bot
Comment 3
2013-12-16 13:23:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug