DatabaseProcess: Fix a few bugs with opening an IDB connection https://bugs.webkit.org/show_bug.cgi?id=125798

Reviewed by Alexey Proskuryakov.

Source/WebCore:

* Modules/indexeddb/IDBDatabaseBackend.cpp:
(WebCore::IDBDatabaseBackend::processPendingCalls): As the comment says, we should only
  early return when there *are* pending delete calls. The logic here was backwards,
  preventing the backend from ever getting to processPendingOpenCalls().

Source/WebKit2:

Database metadata always needs a non-zero database identifier, unique at runtime.

* DatabaseProcess/IndexedDB/sqlite/UniqueIDBDatabaseBackingStoreSQLite.cpp:
(WebKit::generateDatabaseId):
(WebKit::UniqueIDBDatabaseBackingStoreSQLite::getOrEstablishMetadata):


Canonical link: https://commits.webkit.org/143819@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160659 268f45cc-cd09-0410-ab3c-d52691b4dbfc